Remove GPX support
