# src/main/java/org/railwaystations/rsapi/adapter/in/web/controller/StationsController.java
@@ -1,7 +1,6 @@
 package org.railwaystations.rsapi.adapter.in.web.controller;
 
 import org.railwaystations.rsapi.adapter.in.web.model.StationDto;
-import org.railwaystations.rsapi.adapter.in.web.writer.StationsGpxWriter;
 import org.railwaystations.rsapi.core.model.Station;
 import org.railwaystations.rsapi.core.ports.in.FindPhotoStationsUseCase;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -38,7 +37,7 @@ public class StationsController {
     @Value("${photoBaseUrl}")
     private String photoBaseUrl;
 
-    @GetMapping(produces = {MediaType.APPLICATION_JSON_VALUE + ";charset=UTF-8", StationsGpxWriter.GPX_MEDIA_TYPE_VALUE}, value = "/stations")
+    @GetMapping(produces = {MediaType.APPLICATION_JSON_VALUE + ";charset=UTF-8"}, value = "/stations")
     public List<StationDto> get(@RequestParam(value = COUNTRY, required = false) Set<String> countries,
                                 @RequestParam(value = HAS_PHOTO, required = false) Boolean hasPhoto,
                                 @RequestParam(value = PHOTOGRAPHER, required = false) String photographer,
@@ -60,18 +59,7 @@ public class StationsController {
         return get(countries, hasPhoto, photographer, maxDistance, lat, lon, active);
     }
 
-    @GetMapping(produces = {StationsGpxWriter.GPX_MEDIA_TYPE_VALUE}, value = "/stations.gpx")
-    public List<StationDto> getAsGpx(@RequestParam(value = COUNTRY, required = false) Set<String> countries,
-                             @RequestParam(value = HAS_PHOTO, required = false) Boolean hasPhoto,
-                             @RequestParam(value = PHOTOGRAPHER, required = false) String photographer,
-                             @RequestParam(value = MAX_DISTANCE, required = false) Integer maxDistance,
-                             @RequestParam(value = LAT, required = false) Double lat,
-                             @RequestParam(value = LON, required = false) Double lon,
-                             @RequestParam(value = ACTIVE, required = false) Boolean active) {
-        return get(countries, hasPhoto, photographer, maxDistance, lat, lon, active);
-    }
-
-    @GetMapping(produces = {MediaType.APPLICATION_JSON_VALUE + ";charset=UTF-8", StationsGpxWriter.GPX_MEDIA_TYPE_VALUE}, value = "/{country}/stations")
+    @GetMapping(produces = {MediaType.APPLICATION_JSON_VALUE + ";charset=UTF-8"}, value = "/{country}/stations")
     public List<StationDto> getWithCountry(@PathVariable(COUNTRY) String country,
                                         @RequestParam(value = HAS_PHOTO, required = false) Boolean hasPhoto,
                                         @RequestParam(value = PHOTOGRAPHER, required = false) String photographer,
@@ -84,17 +72,6 @@ public class StationsController {
 
     @GetMapping(produces = {MediaType.APPLICATION_JSON_VALUE + ";charset=UTF-8"}, value = "/{country}/stations.json")
     public List<StationDto> getWithCountryAsJson(@PathVariable(COUNTRY) String country,
-                                              @RequestParam(value = HAS_PHOTO, required = false) Boolean hasPhoto,
-                                              @RequestParam(value = PHOTOGRAPHER, required = false) String photographer,
-                                              @RequestParam(value = MAX_DISTANCE, required = false) Integer maxDistance,
-                                              @RequestParam(value = LAT, required = false) Double lat,
-                                              @RequestParam(value = LON, required = false) Double lon,
-                                              @RequestParam(value = ACTIVE, required = false) Boolean active) {
-        return getWithCountry(country, hasPhoto, photographer, maxDistance, lat, lon, active);
-    }
-
-    @GetMapping(produces = {StationsGpxWriter.GPX_MEDIA_TYPE_VALUE}, value = "/{country}/stations.gpx")
-    public List<StationDto> getWithCountryAsGpx(@PathVariable(COUNTRY) String country,
                                               @RequestParam(value = HAS_PHOTO, required = false) Boolean hasPhoto,
                                               @RequestParam(value = PHOTOGRAPHER, required = false) String photographer,
                                               @RequestParam(value = MAX_DISTANCE, required = false) Integer maxDistance,
